@@ -43,7 +43,7 @@
 #include <dmalloc.h>
 #endif
 
-TDS_RCSID(var, "$Id: token.c,v 1.398 2011-04-28 15:02:25 freddy77 Exp $");
+TDS_RCSID(var, "$Id: token.c,v 1.399 2011-05-06 16:47:32 freddy77 Exp $");
 
 #define USE_ICONV tds->use_iconv
 
@@ -1062,7 +1062,7 @@ tds_process_col_fmt(TDSSOCKET * tds)
 }
 
 static int
-tds8_read_table_names(TDSSOCKET *tds, int remainder, struct namelist **p_head)
+tds71_read_table_names(TDSSOCKET *tds, int remainder, struct namelist **p_head)
 {
 	struct namelist *head = NULL, *cur = NULL, *prev;
 	int num_names = 0;
@@ -1149,11 +1149,11 @@ tds_process_tabname(TDSSOCKET *tds)
 
 	hdrsize = tds_get_smallint(tds);
 
-	/* different structure for tds8 */
+	/* different structure for tds7.1 */
 	/* hdrsize check is required for tds7.1 revision 1 (mssql without SPs) */
 	/* TODO change tds_version ?? */
 	if (IS_TDS71_PLUS(tds) && (!IS_TDS71(tds) || !tds->tds71rev1))
-		num_names = tds8_read_table_names(tds, hdrsize, &head);
+		num_names = tds71_read_table_names(tds, hdrsize, &head);
 	else
 		num_names = tds_read_namelist(tds, hdrsize, &head, 1);
 	if (num_names < 0)
